[tool.poetry]
name = "scala_hack"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.9.3"
mypy = "^0.910"
yapf = "^0.31.0"
pyparsing = "^2.4.7"
regex = "^2021.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
